<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs646.skyrev.classregistration.DashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <LinearLayout
            android:id="@+id/progress_bar"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true"
            android:gravity="center">
            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/loading" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_container"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/details_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/name_container">

            <LinearLayout
                android:id="@+id/red_id_container"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp">
                <TextView
                    android:id="@+id/label_red_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/label_sdsu_red_id"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/red_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_container"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/label_email_id"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_add_courses"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/details_container"
            android:textColor="@android:color/white"
            android:background="@drawable/button_round_green"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/label_add_courses"
            android:onClick="displayAllCourses"/>

        <LinearLayout
            android:id="@+id/registered_courses_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_add_courses"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:id="@+id/registered_courses_header"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">
                <TextView
                    android:id="@+id/label_registered_courses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/label_registered_courses"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registered_courses_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/label_more_course_details"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/waitlisted_courses_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registered_courses_container"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:id="@+id/waitlisted_courses_header"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">
                <TextView
                    android:id="@+id/label_waitlisted_courses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/label_waitlisted_courses"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/waitlisted_courses_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/label_more_course_details"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_reset_student"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/waitlisted_courses_container"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:background="@drawable/button_round_red"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="dropAllCoursesDialog"
            android:text="@string/label_drop_all_courses"/>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/button_reset_student"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="47dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="logout"
            android:text="@string/label_logout"/>

    </RelativeLayout>
</ScrollView>

